--- a/lib/active_shipping/shipping/carriers/ups/templates/quote.xml.erb
+++ b/lib/active_shipping/shipping/carriers/ups/templates/quote.xml.erb
@@ -105,7 +105,7 @@
                <PackageServiceOptions>
                  <InsuredValue>
                    <CurrencyCode><%= @insured_currency %></CurrencyCode>             
-                   <MonetaryValue><%= @insured_value %></MonetaryValue>
+                   <MonetaryValue><%= insure_for_package %></MonetaryValue>
                  </InsuredValue>
                </PackageServiceOptions>
              <% end %>
