--- a/lib/active_shipping/shipping/carriers/ups/templates/ship_confirm.xml.erb
+++ b/lib/active_shipping/shipping/carriers/ups/templates/ship_confirm.xml.erb
@@ -24,6 +24,7 @@
     <Description><%= @description %></Description>    
     <Shipper>
       <Name><%= @shipper_name %></Name>
+      <AttentionName><%= @shipper_name %></AttentionName>      
       <PhoneNumber><%= @shipper_phone %></PhoneNumber>
       <ShipperNumber><%= @shipper_number %></ShipperNumber>
       <Address>
