--- a/lib/active_shipping/shipping/carriers/dhl/templates/shipment_validation.xml.erb
+++ b/lib/active_shipping/shipping/carriers/dhl/templates/shipment_validation.xml.erb
@@ -57,7 +57,7 @@
               <Piece>
                 <PieceID><%= next_piece_id %></PieceID> 
                 <% if @package_type == "document"%>
-                  <PackageTypeCode>CP</PackageTypeCode>                    
+                  <PackageType>CP</PackageType>                    
                 <% end %>
                 <% if @package_type == "package"%>
                   <PackageType>CP</PackageType>
@@ -84,7 +84,7 @@
             <Piece>
               <PieceID><%= next_piece_id %></PieceID> 
               <% if @package_type == "document"%>
-                <PackageTypeCode>CP</PackageTypeCode>                    
+                <PackageType>CP</PackageType>                    
               <% end %>
               <% if @package_type == "package"%>
                 <PackageType>CP</PackageType>
