--- a/lib/active_shipping/shipping/carriers/ups/templates/pickup.xml.erb
+++ b/lib/active_shipping/shipping/carriers/ups/templates/pickup.xml.erb
@@ -39,8 +39,8 @@
       </PickupAddress>      
       <AlternateAddressIndicator>Y</AlternateAddressIndicator>
       <PickupPiece>
-        <ServiceCode>065</ServiceCode>
-        <Quantity>1</Quantity>
+        <ServiceCode><%= service_code %></ServiceCode>
+        <Quantity><%= @quantity %></Quantity>
         <DestinationCountryCode>MX</DestinationCountryCode>
         <ContainerCode>01</ContainerCode>
       </PickupPiece>
