--- a/lib/active_shipping/shipping/carriers/fedex/templates/shipment.xml.erb
+++ b/lib/active_shipping/shipping/carriers/fedex/templates/shipment.xml.erb
@@ -132,7 +132,7 @@
             <% if @envelope %>
               <Commodities>
                  <NumberOfPieces>1</NumberOfPieces>
-                 <Description><%= @shipment.description %></Description>
+                 <Description><%= @description %></Description>
                  <CountryOfManufacture><%= @shipper_countrycode %></CountryOfManufacture>
                  <Weight>
                     <Units>KG</Units>
